force-app/main/default/objects/Promotion_Offer__c/Promotion_Offer__c.object-meta.xml
<CustomObject>
    <label>Promotion/Offer</label>
    <nameField>
        <label>Promotion/Offer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Promotions/Offers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>