force-app/main/default/objects/Promotion_Offer__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <formula>AND( Discount_Start_Date__c  &lt;=  NOW() ,Discount_End_Date__c  &gt;=  NOW()  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>