force-app/main/default/objects/Promotion_Offer__c/fields/Discount_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Discount_End_Date__c</fullName>
    <label>Discount End Date</label>
    <type>DateTime</type>
</CustomField>