force-app/main/default/objects/Promotion_Offer__c/fields/Discount_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Discount_Start_Date__c</fullName>
    <label>Discount Start Date</label>
    <type>DateTime</type>
</CustomField>